--- a/src/Poll IMDb Shows - Service.csproj
+++ b/src/Poll IMDb Shows - Service.csproj
@@ -13,13 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Conesoft.Files" Version="1.7.3" />
-    <PackageReference Include="Conesoft.Hosting" Version="0.6.2" />
-    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <None Include="Properties\PublishProfiles\Deploy.pubxml.user" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
+    <PackageReference Include="Conesoft.Files" Version="1.9.3" />
+    <PackageReference Include="Conesoft.Hosting" Version="1.4.1" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
   </ItemGroup>
 
 </Project>
